Update nvim mamba qualimap